[adding-text-input] fix z-index for outside rendering

--- a/css/_daterangepicker.scss
+++ b/css/_daterangepicker.scss
@@ -1,6 +1,7 @@
 
 .elm-fancy--daterangepicker {
     position: absolute;
+    z-index: 1000000;
   * {
     box-sizing: border-box;
   }
